hphp/test/slow/packages/requirepackage/parse_errors/parse_errors2.php.inc
<?hh

<<__RequirePackage(42)>>
function bpe() : void {}
